--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <!-- 🔽 Meta tags Open Graph para compartilhar -->
   <meta property="og:title" content="Enrique Augusto" />
-  <meta property="og:description" content="Portfólio audiovisual e criativo de Enrique Augusto." />
+  <meta property="og:description" content="Enrique Fernandes Augusto is a multidisciplinary creative with a
+        background in." />
   <meta property="og:image" content="https://enriqueaugusto.com/og-image.jpg" />
   <meta property="og:url" content="https://enriqueaugusto.com/" />
   <meta property="og:type" content="website" />
