--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <!-- 🔽 Meta tags Open Graph para compartilhar -->
   <meta property="og:title" content="Enrique Augusto" />
-  <meta property="og:description" content="Multidisciplinary creative with a
-        background in post-production." />
+  <meta property="og:description" content="Multidisciplinary creative with a background in post-production." />
   <meta property="og:image" content="https://enriqueaugusto.com/og-image.jpg" />
   <meta property="og:url" content="https://enriqueaugusto.com/" />
   <meta property="og:type" content="website" />
