--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link
     href="https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap"
     rel="stylesheet" />
 
+  <!-- 🔽 Meta tags Open Graph para compartilhar -->
+  <meta property="og:title" content="Enrique Augusto" />
+  <meta property="og:description" content="Multidisciplinary creative with a background in post-production." />
+  <meta property="og:image" content="https://enriqueaugusto.com/og-image.jpg" />
+  <meta property="og:url" content="https://enriqueaugusto.com/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
 
   <title>Enrique Augusto</title>
 </head>
